f1. accuracy, recall. precision

--- a/emotion detection.ipynb
+++ b/emotion detection.ipynb
@@ -2656,7 +2656,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4f610b27",
+   "id": "64d86fd2",
    "metadata": {},
    "outputs": [
     {
@@ -2699,7 +2699,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "716d86e6",
+   "id": "0b1391df",
    "metadata": {},
    "outputs": [
     {
@@ -2738,8 +2738,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "b7a79bfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Emotion  Accuracy    Recall  Precision  F1-Score\n",
+      "0      angry  0.701597  0.570265   0.682927  0.621532\n",
+      "1  happiness  0.701597  0.883959   0.817035  0.849180\n",
+      "2        sad  0.701597  0.531987   0.557319  0.544358\n",
+      "3   surprise  0.701597  0.807692   0.805755  0.806723\n",
+      "4    neutral  0.701597  0.638978   0.605144  0.621601\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
+    "import pandas as pd\n",
+    "#  label_dict \n",
+    "label_dict = {0: 'angry', 1:'happiness', 2: 'sad', 3: 'surprise', 4: 'neutral'}\n",
+    "\n",
+    "\n",
+    "# Create a dictionary to store the metrics\n",
+    "metrics_dict = {\n",
+    "    'Emotion': [label_dict[i] for i in range(len(f1_scores_per_class))],\n",
+    "    'Accuracy': [accuracy_score(val_true_labels, val_pred_labels) for _ in range(len(f1_scores_per_class))],\n",
+    "    'Recall': [recall_score(val_true_labels, val_pred_labels, average=None)[i] for i in range(len(f1_scores_per_class))],\n",
+    "    'Precision': [precision_score(val_true_labels, val_pred_labels, average=None)[i] for i in range(len(f1_scores_per_class))],\n",
+    "    'F1-Score': [f1_scores_per_class[i] for i in range(len(f1_scores_per_class))],\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame from the dictionary\n",
+    "metrics_df = pd.DataFrame(metrics_dict)\n",
+    "\n",
+    "# Display the table-like structure\n",
+    "print(metrics_df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a1d65a86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting pandas\n",
+      "  Downloading pandas-2.1.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.3 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.3/12.3 MB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m0m eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m01\u001b[0m\n",
+      "\u001b[?25hCollecting python-dateutil>=2.8.2\n",
+      "  Downloading python_dateutil-2.8.2-py2.py3-none-any.whl (247 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m247.7/247.7 KB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m31m19.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
+      "Collecting tzdata>=2022.1\n",
+      "  Downloading tzdata-2023.3-py2.py3-none-any.whl (341 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m341.8/341.8 KB\u001b[0m \u001b[31m20.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.22.4 in /home/hduser/.local/lib/python3.10/site-packages (from pandas) (1.26.0)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Installing collected packages: tzdata, python-dateutil, pandas\n",
+      "Successfully installed pandas-2.1.1 python-dateutil-2.8.2 tzdata-2023.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4d798f70",
+   "id": "1302bd11",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2747,7 +2823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa7792d",
+   "id": "1571c071",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2755,23 +2831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ee94cf0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aedeba03",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9151d897",
+   "id": "e7f31fc2",
    "metadata": {},
    "outputs": [],
    "source": []
